# ros2_ws-src

./: .gitignore  .gitmodules  CLAUDE.md  DEV_MANDATES.md  NEW_ALGORITHM_EXPERIMENT_GUIDE.md  OPTICAL_CANE_KB.md  PROJECT_CONTEXT.md  TECHNICAL_ISSUES.md  WORK_STATUS_SUMMARY.md  a4_v4  algorithm_comparator.py  direct_bag_aliases.txt  echo.txt  enhanced_analysis.py  experiment_5x5_setup.sh  experiment_framework.py  fixed_aliases.txt  frames_2025-04-11_07.56.29.gv  frames_2025-04-17_22.11.37.gv  frames_2025-04-17_22.28.00.gv  frames_2025-04-18_05.19.41.gv  frames_2025-04-22_01.28.46.gv  frames_2025-04-22_02.22.17.gv  frames_2025-04-22_02.33.20.gv  frames_2025-04-22_22.51.11.gv  frames_2025-04-23_00.08.39.gv  frames_2025-04-23_01.19.35.gv  frames_2025-04-24_03.07.18.gv  frames_2025-04-24_03.36.57.gv  frames_2025-04-24_04.05.21.gv  frames_2025-04-24_04.13.16.gv  frames_2025-04-24_05.23.42.gv  frames_2025-04-24_05.23.53.gv  frames_2025-04-24_22.06.46.gv  frames_2025-04-25_00.40.20.gv  frames_2025-05-08_05.56.32.gv  frames_2025-05-08_06.04.38.gv  frames_2025-05-08_06.08.58.gv  frames_2025-05-14_02.26.20.gv  frames_2025-05-15_23.27.59.gv  (+21 more)
EOL/: FUTURE_DIRECTIONS.md  (+1 more)
cpp_package/: CMakeLists.txt  package.xml
cpp_package/include/cpp_package/: point_types.h
cpp_package/launch/: comparative_test.launch.py  icp_odom.launch.py  new_algorithms.launch.py  visualization_config.rviz  visualization_test.launch.py
cpp_package/msg/: ObstacleFeedback.msg
cpp_package/scripts/: automated_experiment.py  haptic_driver_node.py
cpp_package/src/: base_path_planner.cpp  base_path_planner.hpp  deskew_node.cpp  front_cloud_filter_node.cpp  ftg_3d_node.cpp  ftg_3d_node_8.22.cpp.bak  ground_plane_fitter_lock_plane_node.cpp  ground_plane_fitter_no_voxel_node.cpp  ground_plane_fitter_node.cpp  haptic_driver_node.cpp  hazard_detector_node.cpp  height_ground_detector_node.cpp  heightmap_planner_node.cpp  heightmap_planner_node_broken.cpp  heightmap_planner_node_fixed.cpp  icp_3d_odom_node.cpp  icp_3d_odom_node.cpp.bak  imu_odometry_node.cpp  navigation_hint_node.cpp  obstacle_detector_node.cpp  obstacle_evaluator_node.cpp  path_planner_3d_node.cpp  path_planner_node.cpp  point_cloud_accumulator_cpp_node.cpp  point_cloud_passthrough_filter_cpp_node.cpp  point_cloud_statistical_outlier_remover_cpp_node.cpp  point_cloud_sweeper_cpp_node.cpp  point_cloud_voxel_filter_cpp_node.cpp  point_count_sweeper_node.cpp  pointcloud_formatter_node.cpp  projected_ground_detector_node.cpp  roi_hazard_detector_node.cpp  stable_ground_detector_node.cpp  stable_ground_fitter_node.cpp  sweep_builder_node.cpp  unified_ftg_3d_planner.cpp  unified_heightmap_planner.cpp  unified_path_planner_2d.cpp  unified_path_planner_3d_corridor.cpp  unified_scan_accumulator_planner.cpp  (+3 more)
lidar_imu_cartographer/: CMakeLists.txt
lidar_imu_cartographer/config/: cartographer_2d.lua  cartographer_2d_scan_imu.lua  cartographer_3d.lua  cartographer_3d_debug.lua  cartographer_3d_fixed.lua  cartographer_3d_minimal.lua  cartographer_3d_scan_imu.lua  cartographer_3d_simple.  cartographer_3d_simple.lua  cartographer_3d_solution.lua  imu_tf_publisher.yaml
lidar_imu_cartographer/config/backup/: backpack_3d.lua  cartographer_3d_final.lua  cartographer_3d_fixed.lua  cartographer_3d_real.lua  cartographer_3d_scan_imu.lua.bak
lidar_imu_cartographer/config/experimental/: cartographer_3d.lua.bak
lidar_imu_cartographer/launch/: cartographer_3d_launch.py  cartographer_3d_real.launch.py  cartographer_3d_revised.launch.py  cartographer_3d_simple.launch.py  cartographer_3d_working.launch.py  cartographer_simple.launch.py  create_rviz_config.py  lidar_imu_cartographer_2d.launch copy.py  lidar_imu_cartographer_3d.launch.py  lidar_imu_cartographer_3d_launch.py  lidar_imu_cartographer_3d_revised.launch.py  lidar_imu_cartographer_launch.py  lidar_imu_cartographer_launch.py.bak  minimal_3d_cartographer.launch.py  slam_3d.launch.py  slam_mapping_test.launch.py  test.launch.py
lidar_imu_cartographer/launch/backup/: cartographer_3d_final.launch.py  cartographer_3d_fixed.launch.py  cartographer_3d_fixed_imu.launch.py  cartographer_3d_revised.launch.py  cartographer_3d_solution.launch.py  cartographer_3d_working_final.launch.py  lidar_imu_cartographer_2d_revised.launch.py  (+3 more)
lidar_imu_cartographer/rviz/: cartographer_2d.rviz  cartographer_3d.rviz  cartographer_3d.rviz.bak  cartographer_3d_full.rviz
lidar_imu_cartographer/scripts/: cartographer_3d_visualizer.py  debug_cartographer.py  debug_pointcloud.py
lidar_imu_tf/: package.xml  setup.cfg  setup.py
lidar_imu_tf/lidar_imu_tf/: imu_odom_publisher.py  imu_tf_publisher.py  imu_tf_publisher.py.bak.bak
localization/lidar_imu_cartographer/: package.xml
localization/lidar_imu_correction/: package.xml  setup.cfg  setup.py
mpu9250_py/: package.xml  setup.cfg  setup.py
mpu9250_py/mpu9250_py/: mpu9250_calibrate.py  mpu9250_node.py  mpu9250_node.py.bak
sweep_builder/: package.xml  setup.cfg  setup.py
sweep_builder/config/: ekf_local.yaml  imu_odom.yaml  my_wearable_lio.yaml  obstacle_costmap_params.yaml.bak  slam_online.yaml
sweep_builder/launch/: a2m8_with_9250_lio.launch.py  nav2_obstacle_launch.py  slam_online.launch.py  test_slam.launch.py
sweep_builder/sweep_builder/: accumulator_node.py  accumulator_node.py.bak  dynamic_obstacle_processor.py  icp_3d_odom.py  leveled_scan_node.py  lidar_imu_filtered_to_pointcloud.py  lidar_imu_filtered_to_pointcloud.py.bak  lidar_imu_filtered_to_pointcloud_front.py  lidar_imu_to_pointcloud.py  obstacle_filter_node.py  scan_to_obstacle_pc_flat.py  sweep_accumulator_node.py  sweep_builder_node.py  sweep_builder_node_raw.py  sweep_xy_filter_node.py
zebedee_lio/: CMakeLists.txt  package.xml
zebedee_lio/launch/: zebedee_lio.launch.py
zebedee_lio/src/: lio_frontend_node.cpp  submap_manager.cpp  submap_manager.cpp.bak
zebedee_lite/: CMakeLists.txt  package.xml
zebedee_lite/config/: ekf_lidar_imu.yaml
zebedee_lite/launch/: frontend.launch.py  sensors.launch.py
zebedee_lite/src/: deskew_scan_node.cpp  icp_odometry_node.cpp  imu_preprocess_node.cpp  odom_tf_broadcaster.cpp
(+542 files in other folders)
