<package format="3">
  <name>lidar_imu_tf</name>
  <version>0.0.0</version>
  <description>TF publisher using IMU</description>
  <maintainer email="p@todo.todo">p</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
