<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sweep_builder</name>
  <version>0.0.0</version>
  <description>2D LiDAR + IMU λ„μ  3D ν¬μΈνΈν΄λΌμ°λ“ λ° λ™μ  μ¥μ• λ¬Ό κ°μ§€</description>
  <maintainer email="whdgnl098@gmail.com">p</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>  <!-- π”¥ μ¶”κ°€ -->
  <depend>tf_transformations</depend>
  
  <!-- π”¥ Python μμ΅΄μ„± μ¶”κ°€ -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-open3d</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
