<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_imu_cartographer</name>
  <version>0.0.1</version>
  <description>2D/3D Cartographer SLAM for SLLIDAR A2M8 and MPU6050</description>
  
  <maintainer email="user@todo.todo">p</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS 2 기본 의존성 -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Cartographer 관련 의존성 -->
  <depend>cartographer</depend>
  <depend>cartographer_ros</depend>
  <depend>cartographer_ros_msgs</depend>
  
  <!-- LiDAR 및 IMU 관련 의존성 -->
  <depend>sllidar_ros2</depend>
  <depend>mpu6050_py</depend>
  <depend>scan_to_pointcloud</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>